# polistress

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .yamllint  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECRETS.md  SECURITY.md  SUPPORT.md  pyproject.toml  renovate.json.example  setup.sh
.claude/: settings.json
.claude/hooks/: require-spec-on-commit.sh
.devcontainer/: devcontainer.json
.github/: AGENTS.md  CODEOWNERS  FUNDING.yml  copilot-instructions.md  dependabot.yml  labeler.yml  labels.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  spec_question.yml
.github/agents/: issue-autofix.md  spec-review.md
.github/workflows/: codeql.yml  container-scan.yml  dco.yml  dependabot-automerge.yml  dependency-review.yml  doc-drift.yml  issue-autofix.yml  labeler.yml  license-scan.yml  lint.yml  release-drafter.yml  release.yml  repo-init.yml  sbom.yml  scorecard.yml  secret-scan.yml  spec-ai-review.yml  spec-bootstrap.yml  spec-check.yml  spec-metrics.yml  stale.yml  template-smoke-test.yml
.harness/: README.md
.licenses/: policy.yaml
.openspec/: config.yaml  defaults.yaml  onboarding.yaml
docs/: BRANCH_PROTECTION.md  OPENSPEC.md  branch-protection-ruleset.json
examples/: README.md  findings.csv  findings.json  generate_example.py  run_summary.md
hooks/: commit-msg  pre-commit
scenarios/: ai_usage_policy.yaml
scripts/: apply-branch-protection  cleanup-template-specs  generate_org.py
src/polistress/: cli.py  (+3 more)
tests/: conftest.py  test_eventlog.py  test_personas.py  test_report.py  test_worldgraph.py
(+43 files in other folders)
